--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -176,7 +176,7 @@
       </p>
       <p>
          Сам танок можна побачити за
-         <a href="https://youtu.be/d_yYC5r8xMI" title="перейти за посиланням"
+         <a href="https://youtu.be/5qkzwG2lLPc" title="перейти за посиланням"
             target="_blank">
             посиланням
          </a>.
