--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -103,7 +103,7 @@
          Тривалість життя павиних павуків у дикій природі 8-11 місяців.
       </p>
       <div>
-         <img src="img/spiders.jpg" alt="spiders" width="500">
+         <img src="img/spiders.jpg" alt="Самка та самець павука-павича" width="500">
       </div>
 
       <h2 id="behavior">Поведніка</h2>
