--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -12,32 +12,32 @@
       <!-- навігація по сторінці -->
       <ul>
          <li>
-            <a href="index.html" title="перейти розділу">
+            <a href="index.html" title="перейти до розділу">
                Вступ
             </a>
          </li>
          <li>
-            <a href="#spread" title="перейти розділу">
+            <a href="#spread" title="перейти до розділу">
                Поширення
             </a>
          </li>
          <li>
-            <a href="#appearance" title="перейти розділу">
+            <a href="#appearance" title="перейти до розділу">
                Зовнішній вигляд
             </a>
          </li>
          <li>
-            <a href="#behavior" title="перейти розділу">
+            <a href="#behavior" title="перейти до розділу">
                Поведінка
             </a>
          </li>
          <li>
-            <a href="#nutrition" title="перейти розділу">
+            <a href="#nutrition" title="перейти до розділу">
                Харчування
             </a>
          </li>
          <li>
-            <a href="#courtship" title="перейти розділу">
+            <a href="#courtship" title="перейти до розділу">
                Залицяння
             </a>
          </li>
@@ -84,7 +84,7 @@
          Довжина тіла статевозрілих самців 3-4 мм, а самок 5-6 мм. Присутній яскраво
          виражений
          <a href="https://uk.wikipedia.org/wiki/%D0%A1%D1%82%D0%B0%D1%82%D0%B5%D0%B2%D0%B8%D0%B9_%D0%B4%D0%B8%D0%BC%D0%BE%D1%80%D1%84%D1%96%D0%B7%D0%BC"
-            title="вікіпедія" target="_blank">
+            title="вікіпедія" target="_blank"  title="перейти за посиланням">
             статевим диморфізмом
          </a>
          у забарвленні та розмірах.
@@ -200,12 +200,12 @@
       <!-- навігація по сторінці -->
       <ul>
          <li>
-            <a href="index.html" title="перейти розділу">
+            <a href="index.html" title="перейти до розділу">
                Вступ
             </a>
          </li>
          <li>
-            <a href="#spread" title="перейти розділу">
+            <a href="#spread" title="перейти до розділу">
                Поширення
             </a>
          </li>
@@ -215,17 +215,17 @@
             </a>
          </li>
          <li>
-            <a href="#behavior" title="перейти розділу">
+            <a href="#behavior" title="перейти до розділу">
                Поведінка
             </a>
          </li>
          <li>
-            <a href="#nutrition" title="перейти розділу">
+            <a href="#nutrition" title="перейти до розділу">
                Харчування
             </a>
          </li>
          <li>
-            <a href="#courtship" title="перейти розділу">
+            <a href="#courtship" title="перейти до розділу">
                Залицяння
             </a>
          </li>
