--- a/lesson-8/index.html
+++ b/lesson-8/index.html
@@ -1558,10 +1558,10 @@
       <div class="footer-container">
          <ul class="nav">
             <li>
-               <a href="">Examples</a>
+               <a href="#examples">Examples</a>
             </li>
             <li>
-               <a href="">Model</a>
+               <a href="#models">Models</a>
             </li>
          </ul>
          <a class="up-link" href="#start">UP</a>
