--- a/lesson-8/index.html
+++ b/lesson-8/index.html
@@ -1488,50 +1488,62 @@
                   thinking to further the overal.
                </p>
             </div>
-            <ul>
+             <ul>
                <li class="first">
-                  <div class="bg-wrapper"></div>
-                  <div class="text-content">
-                     <h3>Financial Investment</h3>
-                     <p class="date">Sep 2022</p>
-                  </div>
+                  <a href="#">
+                     <div class="bg-wrapper"></div>
+                     <div class="text-content">
+                        <h3>Financial Investment</h3>
+                        <p class="date">Sep 2022</p>
+                     </div>
+                  </a>
                </li>
                <li class="second">
-                  <div class="bg-wrapper"></div>
-                  <div class="text-content">
-                     <h3>Marketing Strategy</h3>
-                     <p class="date">Sep 2022</p>
-                  </div>
+                  <a href="#">
+                     <div class="bg-wrapper"></div>
+                     <div class="text-content">
+                        <h3>Marketing Strategy</h3>
+                        <p class="date">Sep 2022</p>
+                     </div>
+                  </a>
                </li>
                <li class="third">
-                  <div class="bg-wrapper"></div>
-                  <div class="text-content">
-                     <h3>Business Consulting</h3>
-                     <p class="date">Sep 2022</p>
-                  </div>
+                  <a href="#">
+                     <div class="bg-wrapper"></div>
+                     <div class="text-content">
+                        <h3>Business Consulting</h3>
+                        <p class="date">Sep 2022</p>
+                     </div>
+                  </a>
                </li>
             </ul>
             <ul>
                <li class="fourth">
-                  <div class="bg-wrapper"></div>
-                  <div class="text-content">
-                     <h3>Financial Investment</h3>
-                     <p class="date">Sep 2022</p>
-                  </div>
+                  <a href="#">
+                     <div class="bg-wrapper"></div>
+                     <div class="text-content">
+                        <h3>Financial Investment</h3>
+                        <p class="date">Sep 2022</p>
+                     </div>
+                  </a>
                </li>
                <li class="fifth">
-                  <div class="bg-wrapper"></div>
-                  <div class="text-content">
-                     <h3>Web Development</h3>
-                     <p class="date">Sep 2022</p>
-                  </div>
+                  <a href="#">
+                     <div class="bg-wrapper"></div>
+                     <div class="text-content">
+                        <h3>Web Development</h3>
+                        <p class="date">Sep 2022</p>
+                     </div>
+                  </a>
                </li>
                <li class="sixth">
-                  <div class="bg-wrapper"></div>
-                  <div class="text-content">
-                     <h3>Financial Investment</h3>
-                     <p class="date">Sep 2022</p>
-                  </div>
+                  <a href="#">
+                     <div class="bg-wrapper"></div>
+                     <div class="text-content">
+                        <h3>Financial Investment</h3>
+                        <p class="date">Sep 2022</p>
+                     </div>
+                  </a>
                </li>
             </ul>
          </div>
