--- a/lesson-8/index.html
+++ b/lesson-8/index.html
@@ -1560,7 +1560,7 @@
                      range - Comfortable &#38; Affordable fashion 24/7
                   </p>
                </div>
-               <a class="link" href="">Shop Now</a>
+               <a class="link" href="#">Shop Now</a>
             </div>
             <div class="right-part"></div>
          </div>
