--- a/lesson-9/index.html
+++ b/lesson-9/index.html
@@ -469,7 +469,7 @@
       </div>
 
       <div class="home" id="home">
-         <div class="hero-container">
+         <div class="home-container">
             <h1>Lesson &#35;9. Pseudo-classes and pseudo-elements</h1>
          </div>
       </div>
