--- a/lesson-9/index.html
+++ b/lesson-9/index.html
@@ -293,8 +293,7 @@
          <div class="about-container">
             <div class="title-block-wrapper">
                <p class="pre-title">Welcome Whitecollar</p>
-               <h2 class="section-title">We Care About Your
-                  <br> Business plan.
+               <h2 class="section-title">We Care About Your Business plan.
                </h2>
             </div>
             <div class="text-wrapper">
