--- a/lesson-9/index.html
+++ b/lesson-9/index.html
@@ -399,7 +399,7 @@
                <h2 class="section-title">How We Work</h2>
             </div>
             <ul class="how-list">
-               <li class="how-card">
+               <li class="how-card first">
                   <div class="card-content-wrapper">
                      <h3>Make Appointment</h3>
                      <div class="text-wrapper">
@@ -411,7 +411,7 @@
                   </div>
                </li>
 
-               <li class="how-card">
+               <li class="how-card second">
                   <div class="card-content-wrapper">
                      <h3>Consultation</h3>
                      <div class="text-wrapper">
@@ -423,7 +423,7 @@
                   </div>
                </li>
 
-               <li class="how-card">
+               <li class="how-card third">
                   <div class="card-content-wrapper">
                      <h3>Enjoy the Service</h3>
                      <div class="text-wrapper">
