--- a/lesson-10/index.html
+++ b/lesson-10/index.html
@@ -189,9 +189,8 @@
          <div class="home-container">
             <h1>Lesson &#35;10. Web graphics</h1>
             <div class="text-wrapper">
-               <p>&#42; the background of this section uses a bitmap image in
-                  "jpg" format and is linked
-                  via CSS as it is not content</p>
+               <p>&#42; section background - disign element, raster (jpg to
+                  webp)</p>
             </div>
          </div>
       </div>
