--- a/lesson-11/index.html
+++ b/lesson-11/index.html
@@ -151,9 +151,11 @@
                      </ul>
                      <p class="block-rating__value">3.5</p>
                   </div>
-                  <div class="rating-comments__block-comments">
-                     <img src="img/message.svg" alt="message" width="20">
-                     <p>120 comment</p>
+                   <div class="rating-comments__block-comments block-comments">
+                     <a class="block-comments__link" href="#">
+                        <img class="block-comments__img" src="img/message.svg" alt="message" width="20">
+                        <p class="block-comments__text">120 comment</p>
+                     </a>
                   </div>
                </div>
                <div class="short-about__size block-size">
