--- a/lesson-11/index.html
+++ b/lesson-11/index.html
@@ -8,12 +8,12 @@
 </head>
 
 <body>
-   <header class="page-header">
-      <div class="page-header__container">
-         <a class="page-header__logo logo" href="#">
+   <header class="header">
+      <div class="header__container">
+         <a class="header__logo logo" href="#">
             <img src="img/logo.svg" alt="logo" width="91">
          </a>
-         <ul class="page-header__nav-list nav">
+         <ul class="header__nav-list nav">
             <li class="nav__item">
                <a class="nav__link" href="#">Shop</a>
             </li>
@@ -30,10 +30,10 @@
                <a class="nav__link" href="#">Joggers</a>
             </li>
          </ul>
-         <form class="page-header__form">
-            <input class="page-header__input" type="text" placeholder="search">
+         <form class="header__form">
+            <input class="header__input" type="text" placeholder="search">
          </form>
-         <ul class="page-header__user-menu user-menu">
+         <ul class="header__user-menu user-menu">
             <li class="user-menu__item">
                <a class="user-menu__link" href="#">
                   <img src="img/heart.svg" alt="heart" width="20">
@@ -196,7 +196,7 @@
                   <form class="colors__form">
                      <input class="colors__input" id="black" type="radio"
                         name="color" value="black">
-                     <label class="colors__label color__label--cheked"
+                     <label class="colors__label colors__label--cheked"
                         for="black"
                         style="background-color: black; width: 22px; height: 22px; display: inline-block;"></label>
                      <input class="colors__input" id="yellow" type="radio"
@@ -315,14 +315,14 @@
                         </ul>
                      </div>
                      <div class="description__video-content video-block">
-                        <p class="video__duration">1:00 M</p>
-                        <a class="video__play-btn" href="#">
+                        <p class="video-block__duration">1:00 M</p>
+                        <a class="video-block__play-btn" href="#">
                            <img src="img/play.svg" alt="play" width="53">
                         </a>
-                        <h3 class="video__title">
+                        <h3 class="video-block__title">
                            Raven Hoodie with black colored design
                         </h3>
-                        <div class="video__video-wrapper">
+                        <div class="video-block__video-wrapper">
                            <img src="img/poster-video.webp" alt="girl"
                               width="532">
                         </div>
@@ -487,10 +487,10 @@
          </div>
       </div>
    </main>
-   <footer class="page-footer">
-      <div class="page-footer__container">
-         <div class="page-footer__nav">
-            <div class="page-footer__links-by-type links-by-type">
+   <footer class="footer">
+      <div class="footer__container">
+         <div class="footer__nav">
+            <div class="footer__links-by-type links-by-type">
                <h2 class="links-by-type__title-block title-footer">
                   Need Help
                </h2>
@@ -514,7 +514,7 @@
                   </li>
                </ul>
             </div>
-            <div class="page-footer__links-by-type links-by-type">
+            <div class="footer__links-by-type links-by-type">
                <h2 class="links-by-type__title-block title-footer">
                   Company
                </h2>
@@ -536,7 +536,7 @@
                   </li>
                </ul>
             </div>
-            <div class="page-footer__links-by-type links-by-type">
+            <div class="footer__links-by-type links-by-type">
                <h2 class="links-by-type__title-block title-footer">
                   More Info
                </h2>
@@ -557,7 +557,7 @@
                   </li>
                </ul>
             </div>
-            <div class="page-footer__links-by-type links-by-type">
+            <div class="footer__links-by-type links-by-type">
                <h2 class="links-by-type__title-block title-footer">
                   Location
                </h2>
@@ -579,7 +579,7 @@
                   </li>
                </ul>
             </div>
-            <div class="page-footer__social-links social-links">
+            <div class="footer__social-links social-links">
                <ul class="social-links__list">
                   <li class="social-links__item">
                      <a class="social-links__link" href="#" target="_blank"
@@ -611,7 +611,7 @@
                   </li>
                </ul>
             </div>
-            <div class="page-footer__app-links app-links">
+            <div class="footer__app-links app-links">
                <h2 class="app-links__title-block title-footer">
                   Download The App
                </h2>
@@ -633,14 +633,14 @@
                </ul>
             </div>
          </div>
-         <div class="page-footer__popular popular">
+         <div class="footer__popular popular">
             <h2 class="popular__title title-footer">Popular
                Categories</h2>
             <a class="popular__link-show" href="#">
                <img src="img/arrow-down.svg" alt="arrow down" width="32">
             </a>
          </div>
-         <div class="page-footer__license license">
+         <div class="footer__license license">
             <div class="license__text-wrapper">
                <p>
                   Copyright &#169; 2023 Euphoria Folks Pvt Ltd. All rights
