--- a/lesson-12/index.html
+++ b/lesson-12/index.html
@@ -809,7 +809,7 @@
                </div>
             </div>
          </div>
-         <div class="model" id="model">
+                 <div class="model" id="model">
             <div class="model__container">
                <ul class="model__list">
                   <li class="model__item">
@@ -821,20 +821,26 @@
                         <ul class="social-networks__list">
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
-                                 <img src="img/model/insta.svg"
-                                    alt="instagram icon" width="45">
+                                 <div class="social-networks__img-wrapper">
+                                    <img src="img/model/insta.svg"
+                                       alt="instagram icon" width="45">
+                                 </div>
                               </a>
                            </li>
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
-                                 <img src="img/model/fb.svg" alt="facebook icon"
-                                    width="45">
+                                 <div class="social-networks__img-wrapper">
+                                    <img src="img/model/fb.svg"
+                                       alt="facebook icon" width="45">
+                                 </div>
                               </a>
                            </li>
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
-                                 <img src="img/model/twiter.svg"
-                                    alt="twiter icon" width="45">
+                                 <div class="social-networks__img-wrapper">
+                                    <img src="img/model/twiter.svg"
+                                       alt="twiter icon" width="45">
+                                 </div>
                               </a>
                            </li>
                         </ul>
@@ -853,20 +859,26 @@
                         <ul class="social-networks__list">
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
-                                 <img src="img/model/insta.svg"
-                                    alt="instagram icon" width="45">
+                                 <div class="social-networks__img-wrapper">
+                                    <img src="img/model/insta.svg"
+                                       alt="instagram icon" width="45">
+                                 </div>
                               </a>
                            </li>
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
-                                 <img src="img/model/fb.svg" alt="facebook icon"
-                                    width="45">
+                                 <div class="social-networks__img-wrapper">
+                                    <img src="img/model/fb.svg"
+                                       alt="facebook icon" width="45">
+                                 </div>
                               </a>
                            </li>
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
-                                 <img src="img/model/twiter.svg"
-                                    alt="twiter icon" width="45">
+                                 <div class="social-networks__img-wrapper">
+                                    <img src="img/model/twiter.svg"
+                                       alt="twiter icon" width="45">
+                                 </div>
                               </a>
                            </li>
                         </ul>
@@ -885,20 +897,26 @@
                         <ul class="social-networks__list">
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
-                                 <img src="img/model/insta.svg"
-                                    alt="instagram icon" width="45">
+                                 <div class="social-networks__img-wrapper">
+                                    <img src="img/model/insta.svg"
+                                       alt="instagram icon" width="45">
+                                 </div>
                               </a>
                            </li>
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
-                                 <img src="img/model/fb.svg" alt="facebook icon"
-                                    width="45">
+                                 <div class="social-networks__img-wrapper">
+                                    <img src="img/model/fb.svg"
+                                       alt="facebook icon" width="45">
+                                 </div>
                               </a>
                            </li>
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
-                                 <img src="img/model/twiter.svg"
-                                    alt="twiter icon" width="45">
+                                 <div class="social-networks__img-wrapper">
+                                    <img src="img/model/twiter.svg"
+                                       alt="twiter icon" width="45">
+                                 </div>
                               </a>
                            </li>
                         </ul>
@@ -917,20 +935,26 @@
                         <ul class="social-networks__list">
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
-                                 <img src="img/model/insta.svg"
-                                    alt="instagram icon" width="45">
+                                 <div class="social-networks__img-wrapper">
+                                    <img src="img/model/insta.svg"
+                                       alt="instagram icon" width="45">
+                                 </div>
                               </a>
                            </li>
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
-                                 <img src="img/model/fb.svg" alt="facebook icon"
-                                    width="45">
+                                 <div class="social-networks__img-wrapper">
+                                    <img src="img/model/fb.svg"
+                                       alt="facebook icon" width="45">
+                                 </div>
                               </a>
                            </li>
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
-                                 <img src="img/model/twiter.svg"
-                                    alt="twiter icon" width="45">
+                                 <div class="social-networks__img-wrapper">
+                                    <img src="img/model/twiter.svg"
+                                       alt="twiter icon" width="45">
+                                 </div>
                               </a>
                            </li>
                         </ul>
@@ -949,20 +973,26 @@
                         <ul class="social-networks__list">
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
-                                 <img src="img/model/insta.svg"
-                                    alt="instagram icon" width="45">
+                                 <div class="social-networks__img-wrapper">
+                                    <img src="img/model/insta.svg"
+                                       alt="instagram icon" width="45">
+                                 </div>
                               </a>
                            </li>
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
-                                 <img src="img/model/fb.svg" alt="facebook icon"
-                                    width="45">
+                                 <div class="social-networks__img-wrapper">
+                                    <img src="img/model/fb.svg"
+                                       alt="facebook icon" width="45">
+                                 </div>
                               </a>
                            </li>
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
-                                 <img src="img/model/twiter.svg"
-                                    alt="twiter icon" width="45">
+                                 <div class="social-networks__img-wrapper">
+                                    <img src="img/model/twiter.svg"
+                                       alt="twiter icon" width="45">
+                                 </div>
                               </a>
                            </li>
                         </ul>
@@ -981,20 +1011,26 @@
                         <ul class="social-networks__list">
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
-                                 <img src="img/model/insta.svg"
-                                    alt="instagram icon" width="45">
+                                 <div class="social-networks__img-wrapper">
+                                    <img src="img/model/insta.svg"
+                                       alt="instagram icon" width="45">
+                                 </div>
                               </a>
                            </li>
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
-                                 <img src="img/model/fb.svg" alt="facebook icon"
-                                    width="45">
+                                 <div class="social-networks__img-wrapper">
+                                    <img src="img/model/fb.svg"
+                                       alt="facebook icon" width="45">
+                                 </div>
                               </a>
                            </li>
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
-                                 <img src="img/model/twiter.svg"
-                                    alt="twiter icon" width="45">
+                                 <div class="social-networks__img-wrapper">
+                                    <img src="img/model/twiter.svg"
+                                       alt="twiter icon" width="45">
+                                 </div>
                               </a>
                            </li>
                         </ul>
