--- a/lesson-12/index.html
+++ b/lesson-12/index.html
@@ -809,7 +809,7 @@
                </div>
             </div>
          </div>
-                 <div class="model" id="model">
+         <div class="model" id="model">
             <div class="model__container">
                <ul class="model__list">
                   <li class="model__item">
@@ -838,8 +838,8 @@
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
                                  <div class="social-networks__img-wrapper">
-                                    <img src="img/model/twiter.svg"
-                                       alt="twiter icon" width="45">
+                                    <img src="img/model/twitter.svg"
+                                       alt="twitter icon" width="45">
                                  </div>
                               </a>
                            </li>
@@ -876,8 +876,8 @@
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
                                  <div class="social-networks__img-wrapper">
-                                    <img src="img/model/twiter.svg"
-                                       alt="twiter icon" width="45">
+                                    <img src="img/model/twitter.svg"
+                                       alt="twitter icon" width="45">
                                  </div>
                               </a>
                            </li>
@@ -914,8 +914,8 @@
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
                                  <div class="social-networks__img-wrapper">
-                                    <img src="img/model/twiter.svg"
-                                       alt="twiter icon" width="45">
+                                    <img src="img/model/twitter.svg"
+                                       alt="twitter icon" width="45">
                                  </div>
                               </a>
                            </li>
@@ -952,8 +952,8 @@
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
                                  <div class="social-networks__img-wrapper">
-                                    <img src="img/model/twiter.svg"
-                                       alt="twiter icon" width="45">
+                                    <img src="img/model/twitter.svg"
+                                       alt="twitter icon" width="45">
                                  </div>
                               </a>
                            </li>
@@ -990,8 +990,8 @@
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
                                  <div class="social-networks__img-wrapper">
-                                    <img src="img/model/twiter.svg"
-                                       alt="twiter icon" width="45">
+                                    <img src="img/model/twitter.svg"
+                                       alt="twitter icon" width="45">
                                  </div>
                               </a>
                            </li>
@@ -1028,8 +1028,8 @@
                            <li class="social-networks__item">
                               <a class="social-networks__link" href="#">
                                  <div class="social-networks__img-wrapper">
-                                    <img src="img/model/twiter.svg"
-                                       alt="twiter icon" width="45">
+                                    <img src="img/model/twitter.svg"
+                                       alt="twitter icon" width="45">
                                  </div>
                               </a>
                            </li>
