--- a/lesson-13/index.html
+++ b/lesson-13/index.html
@@ -445,8 +445,86 @@
                         </div>
                      </div>
                   </li>
-
                </ul>
+            </div>
+         </div>
+         <div class="car">
+            <div class="car__container">
+               <h2>Car</h2>
+               <img src="img/fiesta.jpg" alt="car" width="1000"
+                  style="margin-bottom: 30px;">
+               <div class="car__wrapper">
+                  <div class="car__up-part-body">
+                     <div class="car__window-wrapper">
+                        <div class="car__window"></div>
+                     </div>
+                     <div class="car__door-line car__door-line--first"></div>
+                     <div class="car__door-line car__door-line--second">
+                     </div>
+                     <div class="car__door-line car__door-line-third"></div>
+                  </div>
+                  <div class="car__lower-part-body">
+                     <div class="car__headlight-wrapper">
+                        <div class="car__headlight"></div>
+                     </div>
+                     <div class="car__fog-light-wrapper">
+                        <div class="car__fog-decor"></div>
+                        <div class="car__fog-light"></div>
+
+                     </div>
+                     <div class="car__door car__door--front"></div>
+                     <div class="car__door car__door--back"></div>
+                     <div
+                        class="car__complete-with-wheel car__complete-with-wheel--front">
+                        <div class="car__fender-wrapper">
+                           <div class="car__fender"></div>
+                        </div>
+                        <div class="car__niche-for-wheel-wrapper">
+                           <div class="car__niche-for-wheel"></div>
+                        </div>
+                        <div class="car__wheel car__wheel--front">
+                           <div class="car__disk disk">
+                              <div class="disk__fragment disk__fragment--first">
+                              </div>
+                              <div
+                                 class="disk__fragment disk__fragment--second">
+                              </div>
+                              <div class="disk__fragment disk__fragment--third">
+                              </div>
+                              <div
+                                 class="disk__fragment disk__fragment--fourth">
+                              </div>
+                              <div class="disk__center"></div>
+                           </div>
+                        </div>
+                     </div>
+                     <div
+                        class="car__complete-with-wheel car__complete-with-wheel--back">
+                        <div class="car__fender-wrapper">
+                           <div class="car__fender"></div>
+                        </div>
+                        <div
+                           class="car__niche-for-wheel-wrapper car__niche-for-wheel-wrapper--back">
+                           <div class="car__niche-for-wheel"></div>
+                        </div>
+                        <div class="car__wheel car__wheel--back">
+                           <div class="car__disk disk">
+                              <div class="disk__fragment disk__fragment--first">
+                              </div>
+                              <div
+                                 class="disk__fragment disk__fragment--second">
+                              </div>
+                              <div class="disk__fragment disk__fragment--third">
+                              </div>
+                              <div
+                                 class="disk__fragment disk__fragment--fourth">
+                              </div>
+                              <div class="disk__center"></div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
             </div>
          </div>
       </main>
