--- a/lesson-13/index.html
+++ b/lesson-13/index.html
@@ -448,7 +448,7 @@
                </ul>
             </div>
          </div>
-         <div class="car">
+         <div class="car" id="car">
             <div class="car__container">
                <h2>Car</h2>
                <img src="img/fiesta.jpg" alt="car" width="1000"
@@ -464,6 +464,7 @@
                      <div class="car__door-line car__door-line-third"></div>
                   </div>
                   <div class="car__lower-part-body">
+                     <div class="car__decor-line"></div>
                      <div class="car__headlight-wrapper">
                         <div class="car__headlight"></div>
                      </div>
@@ -472,8 +473,11 @@
                         <div class="car__fog-light"></div>
 
                      </div>
-                     <div class="car__door car__door--front"></div>
-                     <div class="car__door car__door--back"></div>
+                     <div class="car__door car__door--front">
+
+                     </div>
+                     <div class="car__door car__door--back">
+                     </div>
                      <div
                         class="car__complete-with-wheel car__complete-with-wheel--front">
                         <div class="car__fender-wrapper">
@@ -523,6 +527,27 @@
                            </div>
                         </div>
                      </div>
+                     <div
+                        class="car__handle-wrapper car__handle-wrapper--front">
+                        <div class="car__handle"></div>
+                     </div>
+                     <div
+                        class="car__handle-wrapper  car__handle-wrapper--back">
+                        <div class="car__handle"></div>
+                     </div>
+                     <div class="car__mirror-holder"></div>
+                     <div class="car__back-of-mirror"></div>
+                     <div class="car__fuel-tank-cap-wrapper">
+                        <div class="car__fuel-tank-cap"></div>
+                     </div>
+                     <div class="car__back-headlight-wrapper">
+                        <div class="car__back-headlight"></div>
+                     </div>
+                     <div class="car__back-bumper">
+                        <div class="car__back-bumper-headlight"></div>
+                     </div>
+                     <div class="car__back-bumper-decor"></div>
+
                   </div>
                </div>
             </div>
