--- a/lesson-15/models.html
+++ b/lesson-15/models.html
@@ -429,7 +429,7 @@
                               <p>
                                  <span class="accent-text">Order Status
                                     :</span>
-                                 Inprogress
+                                 Shipped
                               </p>
                               <p>
                                  <span class="accent-text">Payment
