--- a/lesson-15/models.html
+++ b/lesson-15/models.html
@@ -54,13 +54,13 @@
                         <div class="card__body">
                            <div class="card__text-content">
                               <h3 class="card__title">
-                                 <a class="card__title-link">
+                                 <a href="#" class="card__title-link">
                                     Shirts
                                  </a>
                               </h3>
                               <p class="card__text">Explore Now!</p>
                            </div>
-                           <a class="card__link">
+                           <a href="#" class="card__link">
                               <img src="img/arrow.svg" alt="/arrow">
                            </a>
                         </div>
@@ -75,13 +75,13 @@
                         <div class="card__body">
                            <div class="card__text-content">
                               <h3 class="card__title">
-                                 <a class="card__title-link">
+                                 <a href="#" class="card__title-link">
                                     Printed T-Shirts
                                  </a>
                               </h3>
                               <p class="card__text">Explore Now!</p>
                            </div>
-                           <a class="card__link">
+                           <a href="#" class="card__link">
                               <img src="img/arrow.svg" alt="/arrow">
                            </a>
                         </div>
@@ -96,13 +96,13 @@
                         <div class="card__body">
                            <div class="card__text-content">
                               <h3 class="card__title">
-                                 <a class="card__title-link">
+                                 <a href="#" class="card__title-link">
                                     Plain T-Shirt
                                  </a>
                               </h3>
                               <p class="card__text">Explore Now!</p>
                            </div>
-                           <a class="card__link">
+                           <a href="#" class="card__link">
                               <img src="img/arrow.svg" alt="/arrow">
                            </a>
                         </div>
@@ -116,13 +116,13 @@
                         <div class="card__body">
                            <div class="card__text-content">
                               <h3 class="card__title">
-                                 <a class="card__title-link">
+                                 <a href="#" class="card__title-link">
                                     Polo T-Shirt
                                  </a>
                               </h3>
                               <p class="card__text">Explore Now!</p>
                            </div>
-                           <a class="card__link">
+                           <a href="#" class="card__link">
                               <img src="img/arrow.svg" alt="/arrow">
                            </a>
                         </div>
@@ -136,13 +136,13 @@
                         <div class="card__body">
                            <div class="card__text-content">
                               <h3 class="card__title">
-                                 <a class="card__title-link">
+                                 <a href="#" class="card__title-link">
                                     Hoodies &amp; Sweetshirt
                                  </a>
                               </h3>
                               <p class="card__text">Explore Now!</p>
                            </div>
-                           <a class="card__link">
+                           <a href="#" class="card__link">
                               <img src="img/arrow.svg" alt="/arrow">
                            </a>
                         </div>
@@ -156,13 +156,13 @@
                         <div class="card__body">
                            <div class="card__text-content">
                               <h3 class="card__title">
-                                 <a class="card__title-link">
+                                 <a href="#" class="card__title-link">
                                     Jeans
                                  </a>
                               </h3>
                               <p class="card__text">Explore Now!</p>
                            </div>
-                           <a class="card__link">
+                           <a href="#" class="card__link">
                               <img src="img/arrow.svg" alt="/arrow">
                            </a>
                         </div>
@@ -177,13 +177,13 @@
                         <div class="card__body">
                            <div class="card__text-content">
                               <h3 class="card__title">
-                                 <a class="card__title-link">
+                                 <a href="#" class="card__title-link">
                                     Activewear
                                  </a>
                               </h3>
                               <p class="card__text">Explore Now!</p>
                            </div>
-                           <a class="card__link">
+                           <a href="#" class="card__link">
                               <img src="img/arrow.svg" alt="/arrow">
                            </a>
                         </div>
@@ -197,13 +197,13 @@
                         <div class="card__body">
                            <div class="card__text-content">
                               <h3 class="card__title">
-                                 <a class="card__title-link">
+                                 <a href="#" class="card__title-link">
                                     Boxers
                                  </a>
                               </h3>
                               <p class="card__text">Explore Now!</p>
                            </div>
-                           <a class="card__link">
+                           <a href="#" class="card__link">
                               <img src="img/arrow.svg" alt="/arrow">
                            </a>
                         </div>
