--- a/lesson-15/models.html
+++ b/lesson-15/models.html
@@ -12,7 +12,7 @@
 
 <body class="body body--models-page">
    <div class="wrapper">
-      <header class="models-header">
+      <header class="models-header  models-header--margin-bottom">
          <div class="models-header__container">
             <div class="models-header__left-path">
                <a class="models-header__logo" href="#">
