--- a/lesson-15/models.html
+++ b/lesson-15/models.html
@@ -12,7 +12,7 @@
 
 <body class="body body--models-page">
    <div class="wrapper">
-      <header class="models-header  models-header--margin-bottom">
+      <header class="models-header models-header--mb">
          <div class="models-header__container">
             <div class="models-header__left-path">
                <a class="models-header__logo" href="#">
@@ -42,7 +42,7 @@
          </div>
       </header>
       <main class="page">
-         <div class="categories">
+         <div class="categories categories--mb">
             <div class="categories__container">
                <h2 class="categories__section-title">Categories For Men</h2>
                <div class="categories__list">
@@ -54,13 +54,13 @@
                         <div class="card__body">
                            <div class="card__text-content">
                               <h3 class="card__title">
-                                 <a href="#" class="card__title-link">
+                                 <a class="card__title-link">
                                     Shirts
                                  </a>
                               </h3>
                               <p class="card__text">Explore Now!</p>
                            </div>
-                           <a href="#" class="card__link">
+                           <a class="card__link">
                               <img src="img/arrow.svg" alt="/arrow">
                            </a>
                         </div>
@@ -75,13 +75,13 @@
                         <div class="card__body">
                            <div class="card__text-content">
                               <h3 class="card__title">
-                                 <a href="#" class="card__title-link">
+                                 <a class="card__title-link">
                                     Printed T-Shirts
                                  </a>
                               </h3>
                               <p class="card__text">Explore Now!</p>
                            </div>
-                           <a href="#" class="card__link">
+                           <a class="card__link">
                               <img src="img/arrow.svg" alt="/arrow">
                            </a>
                         </div>
@@ -96,13 +96,13 @@
                         <div class="card__body">
                            <div class="card__text-content">
                               <h3 class="card__title">
-                                 <a href="#" class="card__title-link">
+                                 <a class="card__title-link">
                                     Plain T-Shirt
                                  </a>
                               </h3>
                               <p class="card__text">Explore Now!</p>
                            </div>
-                           <a href="#" class="card__link">
+                           <a class="card__link">
                               <img src="img/arrow.svg" alt="/arrow">
                            </a>
                         </div>
@@ -116,13 +116,13 @@
                         <div class="card__body">
                            <div class="card__text-content">
                               <h3 class="card__title">
-                                 <a href="#" class="card__title-link">
+                                 <a class="card__title-link">
                                     Polo T-Shirt
                                  </a>
                               </h3>
                               <p class="card__text">Explore Now!</p>
                            </div>
-                           <a href="#" class="card__link">
+                           <a class="card__link">
                               <img src="img/arrow.svg" alt="/arrow">
                            </a>
                         </div>
@@ -136,13 +136,13 @@
                         <div class="card__body">
                            <div class="card__text-content">
                               <h3 class="card__title">
-                                 <a href="#" class="card__title-link">
+                                 <a class="card__title-link">
                                     Hoodies &amp; Sweetshirt
                                  </a>
                               </h3>
                               <p class="card__text">Explore Now!</p>
                            </div>
-                           <a href="#" class="card__link">
+                           <a class="card__link">
                               <img src="img/arrow.svg" alt="/arrow">
                            </a>
                         </div>
@@ -156,13 +156,13 @@
                         <div class="card__body">
                            <div class="card__text-content">
                               <h3 class="card__title">
-                                 <a href="#" class="card__title-link">
+                                 <a class="card__title-link">
                                     Jeans
                                  </a>
                               </h3>
                               <p class="card__text">Explore Now!</p>
                            </div>
-                           <a href="#" class="card__link">
+                           <a class="card__link">
                               <img src="img/arrow.svg" alt="/arrow">
                            </a>
                         </div>
@@ -177,13 +177,13 @@
                         <div class="card__body">
                            <div class="card__text-content">
                               <h3 class="card__title">
-                                 <a href="#" class="card__title-link">
+                                 <a class="card__title-link">
                                     Activewear
                                  </a>
                               </h3>
                               <p class="card__text">Explore Now!</p>
                            </div>
-                           <a href="#" class="card__link">
+                           <a class="card__link">
                               <img src="img/arrow.svg" alt="/arrow">
                            </a>
                         </div>
@@ -197,13 +197,13 @@
                         <div class="card__body">
                            <div class="card__text-content">
                               <h3 class="card__title">
-                                 <a href="#" class="card__title-link">
+                                 <a class="card__title-link">
                                     Boxers
                                  </a>
                               </h3>
                               <p class="card__text">Explore Now!</p>
                            </div>
-                           <a href="#" class="card__link">
+                           <a class="card__link">
                               <img src="img/arrow.svg" alt="/arrow">
                            </a>
                         </div>
@@ -213,7 +213,7 @@
             </div>
          </div>
 
-         <div class="wishlist">
+         <div class="wishlist wishlist--mb">
             <div class="wishlist__container">
                <h2 class="wishlist__section-title section-title">Wishlist</h2>
                <div class="wishlist__list">
@@ -342,7 +342,7 @@
             </div>
          </div>
 
-         <div class="orders">
+         <div class="orders orders--mb">
             <div class="orders__container">
                <div class="orders__list">
                   <div class="orders__item">
