--- a/lesson-16/models.html
+++ b/lesson-16/models.html
@@ -16,17 +16,20 @@
          <div class="header__container">
             <ul class="header__nav nav">
                <li class="nav__item">
-                  <a class="nav__link" href="index.html">Practice</a>
+                  <a class="nav__link nav__link--line-bg"
+                     href="index.html">Practice</a>
                </li>
                <li class="nav__item">
-                  <a class="nav__link" href="#my-info">My Info</a>
+                  <a class="nav__link nav__link--line-bg" href="#my-info">My
+                     Info</a>
                </li>
                <li class="nav__item">
-                  <a class="nav__link" href="#check-out">Check
+                  <a class="nav__link nav__link--line-bg"
+                     href="#check-out">Check
                      Out</a>
                </li>
                <li class="nav__item">
-                  <a class="nav__link" href="#call-back">Call
+                  <a class="nav__link nav__link--line-bg" href="#call-back">Call
                      Back</a>
             </ul>
          </div>
@@ -323,17 +326,20 @@
          <div class="footer__container">
             <ul class="footer__nav nav">
                <li class="nav__item">
-                  <a class="nav__link" href="#practice">Practice</a>
+                  <a class="nav__link nav__link--line-bg"
+                     href="#practice">Practice</a>
                </li>
                <li class="nav__item">
-                  <a class="nav__link" href="#my-info">My Info</a>
+                  <a class="nav__link nav__link--line-bg" href="#my-info">My
+                     Info</a>
                </li>
                <li class="nav__item">
-                  <a class="nav__link" href="#check-out">Check
+                  <a class="nav__link nav__link--line-bg"
+                     href="#check-out">Check
                      Out</a>
                </li>
                <li class="nav__item">
-                  <a class="nav__link" href="#call-back">Call
+                  <a class="nav__link nav__link--line-bg" href="#call-back">Call
                      Back</a>
             </ul>
             <p class="footer__name">Fedorova Nataliya</p>
