call back form - ok

--- a/lesson-16/index.html
+++ b/lesson-16/index.html
@@ -284,7 +284,7 @@
          </div>
       </footer>
    </div>
-   <!-- <script src="js/practice.js" type="module"></script> -->
+   <script src="js/practice.js" type="module"></script>
 </body>
 
 </html>
