--- a/lesson-16/models.html
+++ b/lesson-16/models.html
@@ -848,6 +848,65 @@
                </form>
             </div>
          </div>
+
+         <div class="call-back" id="call-back">
+            <div class="call-back__container">
+               <h2 class="call-back__title">Contact Us</h2>
+               <p class="call-back__text">Request A Call Back !</p>
+               <form class="call-back__form" action="#" method="GET"
+                  enctype="multipart/form-data" data-call-back-form>
+                  <div class="call-back__main-path-form">
+                     <div class="call-back__column">
+                        <div class="call-back__line">
+                           <input class="call-back__input" type="text"
+                              name="userName" id="call-back-name"
+                              placeholder=" ">
+                           <label class="call-back__label"
+                              for="call-back-name">Your
+                              Name</label>
+                        </div>
+                     </div>
+                     <div class="call-back__column">
+                        <div class="call-back__line">
+                           <input class="call-back__input" type="email"
+                              name="email" id="call-back-email" placeholder=" ">
+                           <label class="call-back__label"
+                              for="call-back-email">Email
+                              Address</label>
+                        </div>
+                     </div>
+                     <div class="call-back__column">
+                        <div class="call-back__line">
+                           <input class="call-back__input" type="tel"
+                              name="phone" id="call-back-phone" placeholder=" ">
+                           <label class="call-back__label"
+                              for="call-back-phone">Phone
+                              Number</label>
+                        </div>
+                     </div>
+                     <div class="call-back__column">
+                        <div class="call-back__line">
+                           <input class="call-back__input" type="text"
+                              name="subject" id="call-back-subject"
+                              placeholder=" ">
+                           <label class="call-back__label"
+                              for="call-back-subject">Subject</label>
+                        </div>
+                     </div>
+                     <div class="call-back__column">
+                        <div class="call-back__line">
+                           <textarea class="call-back__textarea" name="message"
+                              id="call-back-message"
+                              placeholder="Message..."></textarea>
+                        </div>
+                     </div>
+                  </div>
+                  <button class="call-back__button"
+                     type="submit">Submit</button>
+               </form>
+            </div>
+
+         </div>
       </main>
       <footer class="footer">
          <div class="footer__container">
@@ -874,7 +933,7 @@
       </footer>
    </div>
 
-   <!-- <script src="js/models.js" type="module"></script> -->
+   <script src="js/models.js" type="module"></script>
 </body>
 
 </html>
