fix input number

--- a/lesson-16/models.html
+++ b/lesson-16/models.html
@@ -120,6 +120,7 @@
                               <input
                                  class="my-info__input models-input models-input--ttransform"
                                  id="info-apt" type="number" name="apt" min="1"
+                                 step="1"
                                  placeholder="Apartment, suite, unit, etc. &#40;optional&#41;"
                                  title="Enter a number from 1">
                            </div>
@@ -463,7 +464,7 @@
                            <input
                               class="check-out__input models-input models-input--ttransform "
                               id="check-out-apt" type="number" name="apt"
-                              min="1"
+                              min="1" step="1"
                               placeholder="Apartment, suite, unit, etc. &#40;optional&#41;"
                               title="Enter a number from 1">
                         </div>
