--- a/lesson-16/models.html
+++ b/lesson-16/models.html
@@ -913,8 +913,8 @@
          <div class="footer__container">
             <ul class="footer__nav nav">
                <li class="nav__item">
-                  <a class="nav__link nav__link--line-bg"
-                     href="#practice">Practice</a>
+                  <a class="nav__link nav__link--line-bg" href="index.html">Practice</a>
+>Practice</a>
                </li>
                <li class="nav__item">
                   <a class="nav__link nav__link--line-bg" href="#my-info">My
