btn hover and focus

--- a/lesson-16/models.html
+++ b/lesson-16/models.html
@@ -914,7 +914,7 @@
             <ul class="footer__nav nav">
                <li class="nav__item">
                   <a class="nav__link nav__link--line-bg"
-                     href="#practice">Practice</a>
+                     href="index.html">Practice</a>
                </li>
                <li class="nav__item">
                   <a class="nav__link nav__link--line-bg" href="#my-info">My
