--- a/lesson-17/index.html
+++ b/lesson-17/index.html
@@ -86,6 +86,7 @@
                      </div>
                   </div>
                </div>
+               <div class="first-model__decor"></div>
             </div>
          </div>
       </main>
